RESOLVED FIXED101775
[Qt] MiniBrowser should not strongly depend on QtTestSupport.
https://bugs.webkit.org/show_bug.cgi?id=101775
Summary [Qt] MiniBrowser should not strongly depend on QtTestSupport.
Zeno Albisser
Reported 2012-11-09 09:54:34 PST
[Qt] MiniBrowser should not strongly depend on QtTestSupport.
Attachments
Patch (4.81 KB, patch)
2012-11-09 09:59 PST, Zeno Albisser
no flags
Patch (4.39 KB, patch)
2012-11-09 10:56 PST, Zeno Albisser
vestbo: review+
Zeno Albisser
Comment 1 2012-11-09 09:59:47 PST
Early Warning System Bot
Comment 2 2012-11-09 10:16:55 PST
Early Warning System Bot
Comment 3 2012-11-09 10:19:00 PST
Andras Becsi
Comment 4 2012-11-09 10:36:49 PST
Comment on attachment 173331 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173331&action=review > Source/WebCore/Target.pri:4079 > +if(build?(qttestsupport)) { This should probably be have?(qttestsupport), which should fix the build.
Zeno Albisser
Comment 5 2012-11-09 10:42:44 PST
Comment on attachment 173331 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173331&action=review >> Source/WebCore/Target.pri:4079 >> +if(build?(qttestsupport)) { > > This should probably be have?(qttestsupport), which should fix the build. No, that is intentional. As it is translated from build to have in features.prf. > Source/WebCore/platform/qt/QtTestSupport.h:27 > +#if HAVE(QTTESTSUPPORT) But these one here is evil. I should have known better. :-)
Zeno Albisser
Comment 6 2012-11-09 10:56:51 PST
Tor Arne Vestbø
Comment 7 2012-11-11 07:11:34 PST
Comment on attachment 173336 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=173336&action=review > Source/WebCore/Target.pri:4079 > +if(build?(qttestsupport)) { you can simplify this to just build?(qttestsupport) {}
Zeno Albisser
Comment 8 2012-11-12 03:09:01 PST
Note You need to log in before you can comment on or make changes to this bug.