[Qt] MiniBrowser should not strongly depend on QtTestSupport. https://bugs.webkit.org/show_bug.cgi?id=101775

Introducing HAVE(QTTESTSUPPORT) to allow building
MiniBrowser without QtTestSupport.
This is necessary when using a production build.

Reviewed by Tor Arne Vestbø.

Source/WebCore:

* Target.pri:
* platform/qt/QtTestSupport.h:

Tools:

* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::handleUserOptions):
* qmake/mkspecs/features/configure.prf:
* qmake/mkspecs/features/features.prf:

git-svn-id: svn://svn.chromium.org/blink/trunk@134200 bbb929c8-8fbe-4397-9dbb-9b2b20218538