third_party/WebKit/Source/WebCore/Target.pri
@@ -4080,7 +4080,7 @@ use?(GRAPHICS_SURFACE) {
     }
 }
 
-if(build?(drt)|build?(wtr)) {
+build?(qttestsupport) {
     HEADERS += platform/qt/QtTestSupport.h
     SOURCES += platform/qt/QtTestSupport.cpp
 }
